--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
-  "name": "gatsby-plugin-styled-jsx-webpack",
+  "name": "gatsby-plugin-styled-jsx-webpack-loader",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@babel/runtime": "^7.1.5"
+  },
+  "scripts": {
+    "build": "babel src --out-dir . --ignore **/__tests__",
+    "prepare": "cross-env NODE_ENV=production npm run build",
+    "watch": "babel -w src --out-dir . --ignore **/__tests__",
+    "lint": "eslint 'src/*.js'",
+    "prettier:check": "prettier --list-different 'src/*.js'",
+    "prettier:fix": "prettier --write 'src/*.js'"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.5",
+    "babel-preset-gatsby-package": "^0.1.2",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.9.0",
+    "prettier": "^1.15.2"
+  }
 }
